--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -203,19 +203,62 @@ Since lowering the difference in hydrophobicity between TMH6 and TMH7 impedes ef
 Another group of proteins that featured heavily on the list of top \gls{tmh} pairs with high hydrophobic discrepency was ion channels (Figure \ref{fig:good-bad-ontology}B).
 Ion channels are a much more structurally varied class of \gls{tmp} than \gls{gpcr}s, varing greatly in their number of \gls{tmh}s, so a summary structural alignment equivalent to Figure \ref{fig:GPCR-structures}A, B, and C was not possible.
 
-In the 6TMH class of ion channels, we observe a conserved difference in the relatively polar TMH4 known to carry charged residues.
+Voltage gated ion channels are another example of cooperative \gls{tmh} insertion.
+The 3rd and 4th \gls{tmh} of the potassium channel (shaker family) has been shown to insert either sequentially or cooperatively \cite{Zhang2007, Cymer2015}.
+This is especially notable in the case of KAT1, that is a plant K$_v$ channel that is thought to mediate long-term potassium influx into guard cells causing the stomata to open.
+In the case of KAT1, N-glycosylation of various mutant fusion KAT1 constructs revealed that there is no choice of sequential insertion since TMH3 and TMH4 have no insertion potential and no topogenic functions themselves \cite{Sato2002, Sato2003}.
+In TMH4 this is due to the charged residues making it relatively polar.
+However, previous experimentation in Kv1.3 had found that while TMH4 did not initiate insertion, it did have insertion potential, and that when constructs contained multiple \gls{tmh}s, membrane insertion efficiency increased \cite{Tu2000}.
+Without the ability to stop the translation through the translocon and form a \gls{tmh}, it was suggested that a different means was needed than classic sequential insertion, and even that TMH3 and TMH4 are integrated by the translocon at the same time post-translationally, i.e the \gls{tmh}s are folded prior to insertion \cite{Sato2003}.
+They achieve this in part becase the previous \gls{tmh}s,  TMH1 and TMH2, form a firm ``base'' within the membrane environment.
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width=1\textwidth]{multipass-folding/KD-ion-channels}
-		\captionof{figure}[The hydrophobicity of TMHs in ion channels.]{\textbf{The hydrophobicity of TMHs in ion channels.}}
+\includegraphics[width=0.9\textwidth]{multipass-folding/KD-ion-channels}
+		\captionof{figure}[The hydrophobicity of TMHs in ion channels.]{\textbf{The hydrophobicity of TMHs in ion channels.}
+    A) The Kyte \& Doolittle \gls{tmh} hydrophobicity of \gls{tmh}s according to their \gls{tmh} number of the 6TMH class of ion channels.
+    N=188 (The total number of \gls{tmh}s analysed is 1128).
+    The data is presented as a violoin plot.
+    The thickness of the bar indicates a higher density of points at that hydrophobic value.
+    B) A similar violin plot as in (A), however with the 24 TMH class of ion channel.
+    N=35 (A total of 840 \gls{tmh}s analysed).
+    C) A subset of (A) with the keyword of ion channels restricted to voltage gated ion channels.
+    N=97.
+    D) A subset of (A) with the keyword of ion channels restricted to ligand gated channels.
+    N=33.
+    E) A subset of (A) with the keyword of ion channels restricted to calcium channels.
+    N=38.
+    F) A subset of (A) with the keyword of ion channels restricted to potassium channels.
+    N=88.
+    G) The general schematic of an ion channel.
+    P indicates the pore forming area of the protein, which is integrated into the membrane, but is not a membrane spanning unit.
+    In the case of the 24 class, this pattern is repeated 4 times.
+    }
 
 \label{fig:KD-ion-channels}
 \end{figure}
 
-This holds true for voltage gated ion channels, ligand gated ion channels, and appears to be independent of the ion being transported (Calcium or Potassium).
+In the 6TMH class of ion channels, we observe a conserved difference in the relatively polar TMH4 known to carry charged residues (Figure \ref{fig:KD-ion-channels}A).
+When using the Kyte \& Doolittle hydrophobic scale, the hydrophobic step change between TMH3 (mean hydrophobicity of 1.34) and TMH4 (mean hydrophobicity of 1.01) is statistically significantly different (Welch's t\--test P\--value = 1.83E-8).
+This is the most significant step change besdies TMH4 to TMH5 (mean hydrophobicity of 1.77, Welch's t\--test P\--value = 1.88E-31).
+TMH5, the pore forming region, and TMH6 can be integrated independently into the membrane, but TMH3 and TMH4, at least in the case of KAT1, cannot \cite{Sato2002}.
+However, there is strong evidence that TMH3 and TMH4 cooperate with one another during membrane integration and are inserted at the same time \cite{Sato2002, Sato2003, Zhang2007, Cymer2015}.
+This leads us to be inclined to believe that the hydrophobic gap here that indicates a conserved cooperative role between \gls{tmh}s is that between TMH3 and TMH4 rather than TMH4 and TMH5.
 
-The difference is independent of the scale chosen (Figure \ref{fig:ion-channel-hydrophobicity-verification}).
+
+
+This statistical difference between the hydrophobicity of TMH3 and TMH4 holds true for voltage gated ion channels (Welch's t\--test P\--value = 1.57E-17) (Figure \ref{fig:KD-ion-channels}C).
+However the pattern is more obscure in ligand gated ion channels (Welch's t\--test P\--value = 5.32E-2).
+The difference does appear to match the general pattern however, albeit as a trend, in the 33 records; there is a decrease in the mean hydrophobicity from 1.31 to 1.03 (Figure \ref{fig:KD-ion-channels}D).
+
+ The TMH3 TMH4 hydrophobic step also appears to be independent of the ion being transported.
+ For calcium ion channels the drop from TMH3 (mean hydrophobicity 1.52) to TMH3 (mean hydrophobicity 1.21) is significant (Welch's t\--test P\--value = 3.57E-3) given the relatively low sample size (38 protein records) (Figure \ref{fig:KD-ion-channels}E).
+In potassium channels the difference is even greater between TMH3 (mean hydrophobicity of 1.37) and TMH4 (mean hydrophobicity of 0.61) (Welch's t\--test P\--value = 2.52E-19) in potassium ion channels (Figure \ref{fig:KD-ion-channels}F).
+
+The observed difference between TMH3 and TMH4 is somewhat independent of the scale chosen (Figure \ref{fig:ion-channel-hydrophobicity-verification}), however the Kyte \& Doolittle scale is the most sensitive to the hydrophobic differences between TMH3 and TMH4.
+Statistical significance was found in the difference between TMH3 and TMH4 in the Eisenberg scale (Welch's t\--test P\--value = 4.74E-23), the White and Wimley scale (Welch's t\--test P\--value = 1.26E-3).
+The Hessa/von Heijne biological scale was particularly insensitive to the mean difference (Welch's t\--test P\--value = 7.56E-2), but can scrutinise some difference in the skews of the data (Kilmogorov Smirnov test  P\--value = 1.56E-4, Kruskal Wallis P\--value = 4.00E-2) indicating that whilst biophysically the \gls{tmh}s are distinct, the translocon may not readily scrutinise the hydrophobicity between the two.
+All the scales however corroborate the large hydrophobic difference between TMH4 and TMH5 (Welch's t\--test P\--values for Hessa = 1.23E-35, White and Wimley = 4.82E-23, Eisenberg = 5.72E-41)
 
 \begin{figure}[!ht]
 \centering
@@ -229,32 +272,27 @@ The difference is independent of the scale chosen (Figure \ref{fig:ion-channel-h
 \label{fig:ion-channel-hydrophobicity-verification}
 \end{figure}
 
-24TMH class is essentially a modular variant of the 6TMH class, and has even more extreme discrepencies between the equivalent 4 TMHs.
-
-This is another example of cooperative \gls{tmh} insertion.
-The 3rd and 4th \gls{tmh} of the potassium channel (shaker family) was shown to insert either sequentially or cooperatively \cite{Zhang2007, Cymer2015}.
-This is especially notable in the case of KAT1, that is a plant K$_v$ channel that is thought to mediate long-term potassium influx into guard cells causing the stomata to open.
-In the case of KAT1, N-glycosylation of various mutant fusion KAT1 constructs revealed that there is no choice of sequential insertion since \gls{tmh} 3 and 4 have no insertion potential and no topogenic functions themselves \cite{Sato2002, Sato2003}.
-In \gls{tmh} 4 this is due to the charged residues making it relatively polar.
-However, previous experimentation in Kv1.3 had found that while \gls{tmh} 4 did not initiate insertion, it did have insertion potential, and that when constgructs contained multiple \gls{tmh}s, membrane insertion efficiency increased \cite{Tu2000}.
-Without the ability to stop the translation through the translocon and form a \gls{tmh}, it was suggested that a different means was needed than classic sequential insertion, and even that \gls{tmh} 3 and 4 are integrated by the translocon at the same time post-translationally, i.e the \gls{tmh}s are folded prior to insertion \cite{Sato2003}.
-They achieve this in part becase the previous \gls{tmh}s 1 and 2 form a firm ``base'' within the membrane environment.
+24TMH class is essentially a modular variant of the 6TMH class, and has even more extreme discrepencies between the equivalent 4 TMHs (Figure \ref{fig:KD-ion-channels}B).
+In the first cluster, TMH3 (mean Kyte \& Doolittle hydrophobicity = 0.96) to TMH4 (mean hydrophobicity = 0.47) is different (Welch's t\--test P\--value = 5.16E-6), but even more so is the step up from TMH4 to TMH5 (hydrophobicity = 2.26, Welch's t\--test P\--value = 5.16E-32).
+A similar step change is found between TMH9 and TMH10 (P\--value = 3.02E-13) and TMH10 to TMH11 (P\--value = 5.51E-44), TMH15 to TMH16 (P\--value = 1.79E-23), TMH16 to TMH17 (P\--value = 1.67E-27), TMH21 to TMH22 (P\--value = 1.64E-9), and TMH22 to TMH23 (P\--value = 3.42E-31).
 
 Oddly, as a trend the TMSOC z-score was not sensitive to detecting function in the extremely hydrophobic TMH4 (Figure \ref{Ion-channel-information-entropy}).
-This is due to the other component of the z-score, the sequence information entropy.
+This is due to the other component of the z-score, the sequence information entropy \cite{Wong2011, Wong2012}.
 The relative probability of a polar/charged residue is so high in TMH4 that it apparently has the same expectency as the hydrophobic residues, and the ``simple'' entropy mutes somewhat the effect of the extreme hydrophobicity.
 
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/Ion-channel-information-entropy}
 		\captionof{figure}[Sequence entropy is unsuitable for assessing function in TMH4 of ion channels.]{\textbf{Sequence entropy is unsuitable for assessing function in TMH4 of ion channels.}
+    A) The TMSOC z-score \cite{Wong2011, Wong2012} of \gls{tmh}s from the ion channel dataset used in Figure \ref{KD-ion-channels}A.
+    B) The sequence information entropy of those same \gls{tmh}s.
     }
 
 \label{fig:Ion-channel-information-entropy}
 \end{figure}
 
 
-\subsection{The prevelance of this amongst all TMPs.}
+\subsection{The prevelance of this amongst other transporter TMPs.}
 
 
 \begin{figure}[!ht]
