--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -59,7 +59,8 @@ This could be either the \gls{tmh} finally coming into contact with the cytoplas
 
 The journey of the \gls{tmh} through this machinery has been studied using both crosslinking experiments and the relatively new technique of \gls{ap}s \cite{Cymer2015}.
 
-Accessibility assays and an improved intramolecular crosslinking assay showed that the helical transmembrane S3b–S4 hairpin (the “paddle”) of a voltage-gated potassium (Kv) forms in the ribosome tunnel \cite{Tu2014}.
+Early evidence of secondary structure folding of the Kv ion channel showed that the S6 (TMH6) is indeed compacted in the ribosomal tunnel by using pegylation and calmodulation of the tagged cysteine-scanned S6 transmembrane segment \cite{Lu2005}.
+Furthermore, accessibility assays and an improved intramolecular crosslinking assay showed that the helical transmembrane S3b–S4 hairpin (the “paddle”) of a voltage-gated potassium (Kv) forms in the ribosome tunnel \cite{Tu2014}.
 Ribosomal folding of the \gls{tmh}s in Kv1.3, a potassium channel, is maintained in the translocon \cite{Tu2010}.
 Therefore, some of the final structural folded elements of the voltage sensor domain occurs within the ribosomal exit tunnel.
 
@@ -77,6 +78,9 @@ Multiple \gls{tmh}s in a nascent protein can be associated with the eukaryotic t
 It was shown that \gls{tmh}s can stay inassociation with the translocon in order to mediate integration of downstream \gls{tmh}s demonstrated by crosslinking analysis \cite{Sadlish2005, Cross2009}.
 Not only this, but it was shown that there is a direct interaction between the \gls{tmh}s; more recently \gls{ap}s were used to show pulling forces between a \gls{tmh} and more C-terminally located \gls{tmh} during the C-terminal \gls{tmh} membrane partitioning from the translocon \textit{in vivo} \cite{Cymer2013}.
 This could be facilitated during the probing of a \gls{tmh} from the translocon as the lateral gate ``cracks'' open in an intermediate stage before the \gls{tmh} satisfies the full hydrophobic requirements to open the gate fully, an intermediate stage observed in a SecY crystal structure \cite{Egea2010}.
+
+A glycosylation study of three relatively polar \gls{tmh}s revealed that proteins have even evolved to exhibit stronger ``positive\--inside'' tendencies when following another \gls{tmh} \cite{Virkki2014}.
+Subsequent \gls{tmh}s with a strong topological preference (increased arginine presence) increase the insertion potential of relatively polar \gls{tmh}s, however no specific interaction between the \gls{tmh}s was responsible.
 
 \section{Results and discussion}
 
@@ -195,7 +199,7 @@ The timing of this partitioning is controlled by the hydrophobicity of the \gls{
 Although artificially extending the C-terminal did not result release of the \gls{tmh}s, by replacing native TMH7 with a more hydrophobic \gls{tmh}, the speed of insertion was decreased.
 \gls{tmh}s 1-4 are inserted independently, and the 5-7 \gls{tmh}s partition into the membrane at the same time.
 
-Since lowering the difference in hydrophobicity between TMH6 and TMH7 impedes efficient insertion of the \gls{gpcr} \cite{Ismail2008}, and that this hydrophobic difference is high conserved throughout \gls{gpcr}s generally (Figure \ref{fig:GPCR-structures}F), and especially in many of the subfamilies(Figure \ref{fig:KD-GPCR}A, C, D, F), we believe that the hydrophobic difference of TMH6 and TMH7 is highly important to the biogenesis of \gls{gpcr}s. This is evidence for wide spread biologically employed \gls{tmh} cooperation during translocation of a typically hydrophobic \gls{tmh} remaining in association with the translocon until the relatively polar \gls{tmh} is processed by the insertion machinery.
+Since lowering the difference in hydrophobicity between TMH6 and TMH7 impedes efficient insertion of the \gls{gpcr} \cite{Ismail2008}, that one would expect the terminal \gls{tmh} to be more hydrophobic rather than relatively polar \cite{Virkki2014}, and that this hydrophobic difference is high conserved throughout \gls{gpcr}s generally (Figure \ref{fig:GPCR-structures}F), and especially in many of the subfamilies(Figure \ref{fig:KD-GPCR}A, C, D, F), we believe that the hydrophobic difference of TMH6 and TMH7 is highly important to the biogenesis of \gls{gpcr}s. This is evidence for wide spread biologically employed \gls{tmh} cooperation during translocation of a typically hydrophobic \gls{tmh} remaining in association with the translocon until the relatively polar \gls{tmh} is processed by the insertion machinery.
 
 
 \subsection{Ion channels contain polar-hydrophobic TMH pairs/groups}
@@ -279,6 +283,7 @@ A similar step change is found between TMH9 and TMH10 (P\--value = 3.02E-13) and
 Oddly, as a trend the TMSOC z-score was not sensitive to detecting function in the extremely hydrophobic TMH4 (Figure \ref{Ion-channel-information-entropy}).
 This is due to the other component of the z-score, the sequence information entropy \cite{Wong2011, Wong2012}.
 The relative probability of a polar/charged residue is so high in TMH4 that it apparently has the same expectency as the hydrophobic residues, and the ``simple'' entropy mutes somewhat the effect of the extreme hydrophobicity.
+This is compounded by the fact that the White and Wimley scale (used to generate the z-score) is already less sensitive to the relative polarity difference between TMH3 and TMH4 than the Kyte \& Doolittle scale (Figure \ref{KD-ion-channels}A, Figure \ref{ion-channel-hydrophobicity-verification}A).
 
 \begin{figure}[!ht]
 \centering
@@ -292,8 +297,10 @@ The relative probability of a polar/charged residue is so high in TMH4 that it a
 \end{figure}
 
 
-\subsection{The prevelance of this amongst other transporter TMPs.}
+\subsection{The prevelance high hydrophobic discrepency of TMHs amongst other common ``transporter'' TMP classes.}
 
+Whilst the gene ontology recognises ``transporters'' as having disproportionately more highly different hydrophobic sequential pairs, the list is predominantly ion channels, which are molecularly and functionally different from ion transporters.
+It also appears that ion transporters have no conserved hydrophobicity difference between any of their \gls{tmh}s for the 4TMH, 6TMH, 8TMH, or 10TMH classes (Figure \ref{fig:other-groups-good-bad} C, D, E, F, G).
 
 \begin{figure}[!ht]
 \centering
@@ -302,6 +309,12 @@ The relative probability of a polar/charged residue is so high in TMH4 that it a
 
 \label{fig:other-groups-good-bad}
 \end{figure}
+
+Another large family of transporters are the sugar transporters.
+
+The ion channel 4TMH class also has a discrepency between TMH2 (Kyte \& Doolittle hydrophobicity = 1.49) and TMH3 (hydrophobicity = 1.81) (Welch's t\--test P\-- value = 4.42E-10, from 234 records) (Figure \ref{fig:other-groups-good-bad}C).
+The largest family within the 4TMH class is the chloride channel 4TMH family.
+A jump of hydrophobicity is observed in TMH2 (hydrophobicity = 1.05) to TMH3 (hydrophobicity = 1.50) (Welch's t\--test P\-- value = 5.34E-5, from 50 records) (Figure \ref{fig:other-groups-good-bad}B).
 
 \section{Summary}
 
